styling with media queries

--- a/index.html
+++ b/index.html
@@ -20,21 +20,22 @@
             </nav>
         </header>
         <section class="firstpageSection">
-            <h1 class="introduce">
-                I'm ZAXX. <br>
-                Glad to see <br>
-                you!
-            </h1>
-            <div class="greeting">
-                <p>
-
-                    I’m a software developer! I can help you <br>build a product , feature
-                    or website Look <br>through some of my work and <br>experience! If you like
-                    what you see and <br>have a project you need coded, don’t <br>hesitate to
-                    contact me.
-                </p>
+            <div class="hero">
+                <h1 class="introduce">
+                    I'm ZAXX. <br>
+                    Glad to see 
+                    you!
+                </h1>
+                <div class="greeting">
+                    <p>
+                        I’m a software developer! I can help you build a product , feature
+                        or website Look through <br>some of my work and experience! If you like
+                        what you see and have a project you need <br>coded, don’t hesitate to
+                        contact me.
+                    </p>
+                </div>
+                <h2 class="letsConnect">LET'S CONNECT</h2>
             </div>
-            <h2 class="letsConnect">LET'S CONNECT</h2>
             <div class="mediaIcons">
                 <ul class="mediaIcons">
                     <li><a href="#">
