--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="hero">
                 <h1 class="introduce">
                     I'm ZAXX. <br>
-                    Glad to see 
+                    Glad to see
                     you!
                 </h1>
                 <div class="greeting">
@@ -59,107 +59,129 @@
         <!-- worksSection -->
         <section class="works">
             <div class="cards">
-                <img src="Assets/Snapshoot Portfolio mobile.png" alt="photo1">
-                <div class="jobs">
-                    <h2 class="tonic">Tonic</h2>
-                    <div class="headingList">
-                        <span class="canopy">Canopy</span>
-                        <img src="Assets/Counter.png" alt="counterPng">
-                        <span class="devStyle">Back End Dev</span>
-                        <img src="Assets/Counter.png" alt="counterPng">
-                        <span class="time">2015</span>
+                <div class="imageDiv">
+                    <img class="snapshot-photo" src="Assets/Snapshoot Portfolio mobile.png" alt="photo1">
+                </div>
+                <nav class="works-details">
+                    <div class="jobs">
+                        <h2 class="tonic">Tonic</h2>
+                        <div class="headingList">
+                            <span class="canopy">Canopy</span>
+                            <img src="Assets/Counter.png" alt="counterPng">
+                            <span class="devStyle">Back End Dev</span>
+                            <img src="Assets/Counter.png" alt="counterPng">
+                            <span class="time">2015</span>
+                        </div>
                     </div>
-                </div>
-                <div class="card-content">
-                    <p>
-                        A daily selection of privately <br>personalized reads; no accounts
-                        or <br>sign-ups required.
-                    </p>
-                </div>
-                <div class="tags">
-                    <img src="Assets/Tags.png" alt="tags">
-                </div>
-                <button class="see-project" type="button">See Project</button>
+                    <div class="card-content">
+                        <p>
+                            A daily selection of privately <br>personalized reads; no accounts
+                            or <br>sign-ups required.
+                        </p>
+                    </div>
+                    <div class="tags">
+                        <img src="Assets/Tags.png" alt="tags">
+                    </div>
+                    <button class="see-project" type="button">See Project</button>
+                </nav>
             </div>
         </section>
         <section class="works">
             <div class="cards">
-                <img src="Assets/Snapshoot Portfolio mobile2.png" alt="photo1">
-                <div class="jobs">
-                    <h2 class="tonic">Multi-post <br> Stories</h2>
-                    <div class="headingList">
-                        <span class="canopy">Canopy</span>
-                        <img src="Assets/Counter.png" alt="counterPng">
-                        <span class="devStyle">Back End Dev</span>
-                        <img src="Assets/Counter.png" alt="counterPng">
-                        <span class="time">2015</span>
+                <div class="imageDiv">
+
+                    <img class="snapshot-photo" src="Assets/Snapshoot Portfolio mobile2.png" alt="photo1">
+                </div>
+                <nav class="works-details">
+
+                    <div class="jobs">
+                        <h2 class="tonic">Multi-post <br> Stories</h2>
+                        <div class="headingList">
+                            <span class="canopy">Canopy</span>
+                            <img src="Assets/Counter.png" alt="counterPng">
+                            <span class="devStyle">Back End Dev</span>
+                            <img src="Assets/Counter.png" alt="counterPng">
+                            <span class="time">2015</span>
+                        </div>
                     </div>
-                </div>
-                <div class="card-content">
-                    <p>
-                        A daily selection of privately <br>personalized reads; no accounts
-                        or <br>sign-ups required.
-                    </p>
-                </div>
-                <div class="tags">
-                    <img src="Assets/Tags.png" alt="tags">
-                </div>
-                <button class="see-project" type="button">See Project</button>
+                    <div class="card-content">
+                        <p>
+                            A daily selection of privately <br>personalized reads; no accounts
+                            or <br>sign-ups required.
+                        </p>
+                    </div>
+                    <div class="tags">
+                        <img src="Assets/Tags.png" alt="tags">
+                    </div>
+                    <button class="see-project" type="button">See Project</button>
+                </nav>
             </div>
         </section>
         <section class="works">
             <div class="cards">
-                <img src="Assets/Snapshoot Portfolio mobile3.png" alt="photo1">
-                <div class="jobs">
-                    <h2 class="tonic">Tonic</h2>
-                    <div class="headingList">
-                        <span class="canopy">Canopy</span>
-                        <img src="Assets/Counter.png" alt="counterPng">
-                        <span class="devStyle">Back End Dev</span>
-                        <img src="Assets/Counter.png" alt="counterPng">
-                        <span class="time">2015</span>
+                <div class="imageDiv">
+
+                    <img class="snapshot-photo" src="Assets/Snapshoot Portfolio mobile3.png" alt="photo1">
+                </div>
+                <nav class="works-details">
+
+                    <div class="jobs">
+                        <h2 class="tonic">Tonic</h2>
+                        <div class="headingList">
+                            <span class="canopy">Canopy</span>
+                            <img src="Assets/Counter.png" alt="counterPng">
+                            <span class="devStyle">Back End Dev</span>
+                            <img src="Assets/Counter.png" alt="counterPng">
+                            <span class="time">2015</span>
+                        </div>
                     </div>
-                </div>
-                <div class="card-content">
-                    <p>
-                        A daily selection of privately <br>personalized reads; no accounts
-                        or <br>sign-ups required.
-                    </p>
-                </div>
-                <div class="tags">
-                    <img src="Assets/Tags.png" alt="tags">
-                </div>
-                <button class="see-project" type="button">See Project</button>
+                    <div class="card-content">
+                        <p>
+                            A daily selection of privately <br>personalized reads; no accounts
+                            or <br>sign-ups required.
+                        </p>
+                    </div>
+                    <div class="tags">
+                        <img src="Assets/Tags.png" alt="tags">
+                    </div>
+                    <button class="see-project" type="button">See Project</button>
+                </nav>
             </div>
         </section>
         <section class="works">
             <div class="cards">
-                <img src="Assets/Snapshoot Portfolio mobile4.png" alt="photo1">
-                <div class="jobs">
-                    <h2 class="tonic">Multi-post <br> Stories</h2>
-                    <div class="headingList">
-                        <span class="canopy">Canopy</span>
-                        <img src="Assets/Counter.png" alt="counterPng">
-                        <span class="devStyle">Back End Dev</span>
-                        <img src="Assets/Counter.png" alt="counterPng">
-                        <span class="time">2015</span>
+                <div class="imageDiv">
+
+                    <img class="snapshot-photo" src="Assets/Snapshoot Portfolio mobile4.png" alt="photo1">
+                </div>
+                <nav class="works-details">
+
+                    <div class="jobs">
+                        <h2 class="tonic">Multi-post <br> Stories</h2>
+                        <div class="headingList">
+                            <span class="canopy">Canopy</span>
+                            <img src="Assets/Counter.png" alt="counterPng">
+                            <span class="devStyle">Back End Dev</span>
+                            <img src="Assets/Counter.png" alt="counterPng">
+                            <span class="time">2015</span>
+                        </div>
                     </div>
-                </div>
-                <div class="card-content">
-                    <p>
-                        A daily selection of privately <br>personalized reads; no accounts
-                        or <br>sign-ups required.
-                    </p>
-                </div>
-                <div class="tags">
-                    <img src="Assets/Tags.png" alt="tags">
-                </div>
-                <button class="see-project" type="button">See Project</button>
+                    <div class="card-content">
+                        <p>
+                            A daily selection of privately <br>personalized reads; no accounts
+                            or <br>sign-ups required.
+                        </p>
+                    </div>
+                    <div class="tags">
+                        <img src="Assets/Tags.png" alt="tags">
+                    </div>
+                    <button class="see-project" type="button">See Project</button>
+                </nav>
             </div>
         </section>
         <!-- AboutMyself -->
         <section class="aboutmeSection">
-            <div>
+            <div class="about-myself">
                 <h2 class="introduce">About Myself</h2>
                 <div class="greeting">
                     <p>
@@ -170,7 +192,7 @@
                     </p>
                 </div>
                 <h2 class="letsConnect">LET'S CONNECT</h2>
-                <div class="mediaIcons">
+                <div class="mediaIcons-aboutme">
                     <ul class="mediaIcons">
                         <li><a href="#">
                                 <img src="Assets/twitter.svg" alt="twitterIcon">
@@ -252,4 +274,5 @@
         </section>
     </main>
 </body>
+
 </html>
