already desktop version

--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
         <!-- introduceSection -->
         <header>
             <span class="my-logo">ZAXX</span>
-            <nav>
+            <nav class="mobile-tag">
                 <a href="#">
                     <img src="Assets/Union2.png" alt="union2Icon">
                 </a>
+            </nav>
+            <nav class="desktop-tag">
+                <span>Portfolio</span>
+                <span>About</span>
+                <span>Contact</span>
             </nav>
         </header>
         <section class="firstpageSection">
