--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfolio</title>
 </head>
 
@@ -13,11 +16,9 @@
         <!-- introduceSection -->
         <header>
             <span class="my-logo">ZAXX</span>
-            <nav class="mobile-tag">
-                <a href="#">
-                    <img src="Assets/Union2.png" alt="union2Icon">
-                </a>
-            </nav>
+            <button class="humbergurBtn" type="button">
+                <img src="Assets/Union2.png" alt="humbergurBtn">
+            </button>
             <nav class="desktop-tag">
                 <span>Portfolio</span>
                 <span>About</span>
@@ -25,40 +26,42 @@
             </nav>
         </header>
         <section class="firstpageSection">
-            <div class="hero">
-                <h1 class="introduce">
-                    I'm ZAXX. <br>
-                    Glad to see
-                    you!
-                </h1>
-                <div class="greeting">
-                    <p>
-                        I’m a software developer! I can help you build a product , feature
-                        or website Look through <br>some of my work and experience! If you like
-                        what you see and have a project you need <br>coded, don’t hesitate to
-                        contact me.
-                    </p>
+            <div class="backgroundBlurTag">
+                <div class="hero">
+                    <h1 class="introduce">
+                        I'm ZAXX. <br>
+                        Glad to see
+                        you!
+                    </h1>
+                    <div class="greeting">
+                        <p>
+                            I’m a software developer! I can help you build a product , feature
+                            or website Look through <br>some of my work and experience! If you like
+                            what you see and have a project you need <br>coded, don’t hesitate to
+                            contact me.
+                        </p>
+                    </div>
+                    <h2 class="letsConnect">LET'S CONNECT</h2>
                 </div>
-                <h2 class="letsConnect">LET'S CONNECT</h2>
-            </div>
-            <div class="mediaIcons">
-                <ul class="mediaIcons">
-                    <li><a href="#">
-                            <img src="Assets/twitter.svg" alt="twitterIcon">
-                        </a></li>
-                    <li><a href="#">
-                            <img src="Assets/Linkedin icon.svg" alt="LinkedinIcon">
-                        </a></li>
-                    <li><a href="#">
-                            <img src="Assets/medium.svg" alt="mediumIcon">
-                        </a></li>
-                    <li><a href="#">
-                            <img src="Assets/github (1).svg" alt="githubIcon">
-                        </a></li>
-                    <li><a href="#">
-                            <img src="Assets/angellist.svg" alt="angellistIcon">
-                        </a></li>
-                </ul>
+                <div class="mediaIcons">
+                    <ul class="mediaIcons">
+                        <li><a href="#">
+                                <img src="Assets/twitter.svg" alt="twitterIcon">
+                            </a></li>
+                        <li><a href="#">
+                                <img src="Assets/Linkedin icon.svg" alt="LinkedinIcon">
+                            </a></li>
+                        <li><a href="#">
+                                <img src="Assets/medium.svg" alt="mediumIcon">
+                            </a></li>
+                        <li><a href="#">
+                                <img src="Assets/github (1).svg" alt="githubIcon">
+                            </a></li>
+                        <li><a href="#">
+                                <img src="Assets/angellist.svg" alt="angellistIcon">
+                            </a></li>
+                    </ul>
+                </div>
             </div>
         </section>
         <!-- worksSection -->
@@ -125,7 +128,6 @@
         <section class="works">
             <div class="cards">
                 <div class="imageDiv">
-
                     <img class="snapshot-photo" src="Assets/Snapshoot Portfolio mobile3.png" alt="photo1">
                 </div>
                 <nav class="works-details">
@@ -223,7 +225,7 @@
                     <nav class="list-title">
                         <ul class="title">
                             <h4>Language</h4>
-                            <img src="Assets/Union.png" alt="dropdownIcon">
+                            <img src="Assets/Union1.png" alt="dropdownIcon">
                         </ul>
                     </nav>
                     <nav class="programming-language">
@@ -278,6 +280,6 @@
             </footer>
         </section>
     </main>
+    <script src="index.js"></script>
 </body>
-
 </html>
